Add API data user
